force-app/main/default/objects/Service_Type__c/Service_Type__c.object-meta.xml
<CustomObject>
    <label>Service Type</label>
    <pluralLabel>Service Types</pluralLabel>
    
    <nameField>
        
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>