force-app/main/default/objects/Service_Type__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>

</CustomField>