force-app/main/default/objects/Service_Type__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Wash &amp; Fold</fullName></value>
        <value><fullName>Dry Cleaning</fullName></value>
        <value><fullName>Ironing</fullName></value>
        <value><fullName>Alterations</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>