force-app/main/default/objects/Service_Type__c/fields/Processing_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Hours__c</fullName>
    <label>Processing Time (Hours)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>

</CustomField>