force-app/main/default/objects/Service_Type__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <type>Text</type>
    <length>40</length>
    <unique>true</unique>

</CustomField>